# hard_coding_gtk_bar_example

./: Cargo.toml  README.md  alacritty.toml  hyprland.conf  main.rs
hypr_service/: Cargo.toml  main.rs
src/: config.json  main.rs  services.rs  style.css
src/services/: hyprland.rs  mpris.rs  widget_factory.rs
unix_connect/: main.rs
