[package]
name = "gtk-layer-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# regex = "1.10.3"

glib = "0.19.0"
gio = "0.18.4"
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"

async-channel = "1.9.0"
futures = "0.3"
